# CryptoHedgeLab

./: .gitignore  CMakeLists.txt  CryptoHedgeLab_Backtest.ipynb  README.md  SystemDesignDecisions.md  main.cpp
core/common/: ring_buffer.hpp  signal.hpp  tick.hpp
core/execution/: execution_engine.hpp  fill.hpp  hedge_engine.hpp  pnl_tracker.hpp  position.hpp
core/feed_handler/: binance_ws.cpp  binance_ws.hpp  message_parser.hpp
core/kdb/: kdb_record.hpp  kdb_writer.hpp  replay_engine.hpp
core/latency/: latency.hpp
core/order_book/: order_book.hpp
core/quant/: backtest_plot.hpp  backtest_runner.hpp  comparison_engine.hpp  perf_metrics.hpp  report_generator.hpp  strategy_def.hpp  strategy_engine.hpp  strategy_instance.hpp  strategy_parser.hpp
core/strategy/: strategy_engine.hpp
core/ui/: ui_state.hpp  ws_server.hpp
kdb/: schema.q
strategies/: dual_momentum.json  ema_hedged.json  funding_arb.json  inverse_perp_hedge.json  margin_short.json  mean_revert.json  momentum.json  pairs_trading.json  perp_swap_hedge.json  synthetic_put.json  trend_vol_filter.json  vol_straddle.json
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css  types.ts
